# Alpha-Pods---Simple

./: .gitignore  .pre-commit-config.yaml  CLEIR_VARIABLE_ALIGNMENT.md  CVaR-LASSO-CLEIR-Task.MD  DATA_FIXES_SUMMARY.md  GUI_ML_INTEGRATION_COMPLETE.md  GUI_PERFORMANCE_GRAPHS.md  GUI_README.md  ML_CACHING_IMPROVEMENTS.md  ML_ENHANCEMENT_SUMMARY.md  RATE_LIMIT_IMPROVEMENTS.md  README.md  RICH_PROGRESS_IMPLEMENTATION.md  TASK_B_CHECKLIST.md  UNIVERSE_UPDATE_SUMMARY.md  VISUALIZATION_IMPROVEMENTS.md  alphaalgooptimisation.md  commit.md  data.md  debug.md  environment.yml  fixes.md  gui-task.md  pyproject.toml  resolve.md  run_gui.py  taskb.md  tasklist.md  test_cleir_simple.py  test_precision.py  todo.md  transactioncosts.md  verify_cleir.py
.github/workflows/: ci.yml
data/fundamentals/: AAPL_fundamentals_20210101_20220101.pkl  ABBV_fundamentals_20210101_20220101.pkl  ABT_fundamentals_20210101_20220101.pkl  ACN_fundamentals_20210101_20220101.pkl  ADBE_fundamentals_20210101_20220101.pkl  AMD_fundamentals_20210101_20220101.pkl  AMGN_fundamentals_20210101_20220101.pkl  AMZN_fundamentals_20210101_20220101.pkl  AXP_fundamentals_20210101_20220101.pkl  BAC_fundamentals_20210101_20220101.pkl  BLK_fundamentals_20210101_20220101.pkl  BMY_fundamentals_20210101_20220101.pkl  BRK-B_fundamentals_20210101_20220101.pkl  CAT_fundamentals_20210101_20220101.pkl  CMCSA_fundamentals_20210101_20220101.pkl  COST_fundamentals_20210101_20220101.pkl  CRM_fundamentals_20210101_20220101.pkl  CVS_fundamentals_20210101_20220101.pkl  CVX_fundamentals_20210101_20220101.pkl  C_fundamentals_20210101_20220101.pkl  DE_fundamentals_20210101_20220101.pkl  DIS_fundamentals_20210101_20220101.pkl  GILD_fundamentals_20210101_20220101.pkl  GOOGL_fundamentals_20210101_20220101.pkl  GS_fundamentals_20210101_20220101.pkl  HD_fundamentals_20210101_20220101.pkl  HON_fundamentals_20210101_20220101.pkl  INTU_fundamentals_20210101_20220101.pkl  JNJ_fundamentals_20210101_20220101.pkl  JPM_fundamentals_20210101_20220101.pkl  KO_fundamentals_20210101_20220101.pkl  LIN_fundamentals_20210101_20220101.pkl  LLY_fundamentals_20210101_20220101.pkl  LOW_fundamentals_20210101_20220101.pkl  MA_fundamentals_20210101_20220101.pkl  MDLZ_fundamentals_20210101_20220101.pkl  MDT_fundamentals_20210101_20220101.pkl  META_fundamentals_20210101_20220101.pkl  MMM_fundamentals_20210101_20220101.pkl  MO_fundamentals_20210101_20220101.pkl  (+21 more)
data/market_indicators/: dollar_index_20200101_20221201.pkl  dollar_index_20210101_20220101.pkl  dollar_index_20220101_20231231.pkl  oil_20200101_20221201.pkl  (+8 more)
docs/: parameter_research.txt
results/: DELIVERABLES_COMPLETE.md  cleir_index_gui.csv  cvar_index_gui.csv  daily_index_values.csv  ml_enhanced_index.csv  ml_method_note.md  ml_metrics.json  ml_performance_report.md  ml_portfolio_weights.csv  ml_selected_universes.txt  ml_shap_individual_summary.txt  performance_comparison_data.csv  performance_summary.csv  simplified_cvar_index.csv
scripts/: create_professional_plot.py  create_visualization.py  debug_cache_data.py  debug_download.py  generate_final_results.py  generate_performance_comparison_plots.py  generate_results.py  inspect_cache.py  run_baseline_backtest.py  run_baseline_backtest_simple.py  run_cleir_backtest.py  run_simple_ml_backtest.py  show_cleir_results.py  test_backtest_progress.py  test_banner_fonts.py  test_cache_first.py  test_cleir_simple.py  test_display_format.py  test_improved_download.py  test_ml_cache.py  test_ml_integration.py  test_proxy_download.py  test_rich_progress.py  test_tracking_error.py  test_visualization.py  test_with_existing_data.py
src/: __init__.py
tests/: test_core.py  test_ml_enhancement.py  test_universe_centralization.py
(+364 files in other folders)
